# nexus

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh  run.sh  tracer.cpp
.github/ISSUE_TEMPLATE/: documentation-fixes.yml  feature-suggestion.yml  issue-report.yml
cmake/: CPM.cmake  MaestroCompilerOptions.cmake  NexusCompilerOptions.cmake
cmake/Modules/: FindHSA.cmake
python/: code_gen.py  communicate.py  hip.py  utils.py  verify.py
python/hip/: dummy.hip  initial_code.hip  optimized_code.hip
scripts/: nexus
src/: CMakeLists.txt  log.hpp  nexus.cpp  nexus.hpp
test/: CMakeLists.txt  add.py  gemm.py  reduce.py  vector_add.hip  vector_add_inline.hip  vector_add_template.hip  vector_add_thrust.hip
